fix logo spacing

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -43,6 +43,7 @@
   color: #fefefe;
   text-transform: uppercase;
   font-weight: bold;
+  margin-left: 2rem;
 }
 
 .app-dashboard-search {
